rename inner classes to support UpperCamelCase naming convention